# butane

./: Cargo.toml
.github/workflows/: ci.yml
butane/: Cargo.toml
butane/src/: lib.rs
butane/tests/: basic.rs  fake.rs  json.rs  many.rs  migration-tests.rs  r2d2.rs
butane/tests/common/: blog.rs  mod.rs
butane_cli/: Cargo.toml
butane_cli/src/: lib.rs  main.rs
butane_cli/tests/: cli_tests.rs
butane_codegen/: Cargo.toml
butane_core/: Cargo.toml
butane_core/src/: autopk.rs  custom.rs  fkey.rs  lib.rs  many.rs  oncelock_serde.rs  sqlval.rs
butane_core/src/codegen/: dbobj.rs  mod.rs
butane_core/src/db/: adapter.rs  connmethods.rs  mod.rs  pg.rs  r2.rs  sqlite.rs
butane_core/src/migrations/: fsmigrations.rs  memmigrations.rs  migration.rs  mod.rs
butane_core/tests/: compile.rs  connection.rs
butane_test_helper/: Cargo.toml
butane_test_helper/src/: lib.rs  main.rs
example/: README.md
example/src/: main.rs
examples/getting_started/: Cargo.toml  README.md
examples/getting_started/src/: lib.rs
examples/getting_started/tests/: rollback.rs
