[package]
name = "butane_test_helper"
version.workspace = true
authors = ["James Oakley <james@electronstudio.org>"]
edition.workspace = true
description = "A test helper for butane"
publish = false
keywords = ["database", "pg", "test"]
categories = ["database"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Electron100/butane"
documentation = "https://docs.rs/butane/"

[dependencies]
anyhow = "*"
block-id = "0.2"
butane_core = { features = ["pg", "sqlite"], workspace = true }
cargo_metadata = "0.17"
clap = { version = "4.1", features = ["string"] }
ctrlc = "3.4"
env_logger = { workspace = true }
libc = "0.2"
once_cell = { workspace = true }
postgres = { features = ["with-geo-types-0_7"], workspace = true }
rand.workspace = true
tempfile.workspace = true
uuid = { features = ["v4"], workspace = true }

[package.metadata.release]
release = false